[gd_scene load_steps=4 format=2]

[ext_resource path="res://layout/train/layout_train_inspector.gd" type="Script" id=1]
[ext_resource path="res://tools/selector.gd" type="Script" id=2]
[ext_resource path="res://tools/editable_label.gd" type="Script" id=3]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 1 )

[node name="EditableLabel" type="VBoxContainer" parent="."]
offset_right = 149.0
script = ExtResource( 3 )

[node name="HSeparator3" type="HSeparator" parent="."]
offset_top = 4.0
offset_right = 149.0
offset_bottom = 8.0

[node name="SetHomeButton" type="Button" parent="."]
offset_top = 12.0
offset_right = 149.0
offset_bottom = 32.0
text = "Set position as home"

[node name="GoHomeButton" type="Button" parent="."]
offset_top = 36.0
offset_right = 149.0
offset_bottom = 56.0
text = "Go home"

[node name="HSeparator2" type="HSeparator" parent="."]
offset_top = 60.0
offset_right = 149.0
offset_bottom = 64.0

[node name="RandomTargetsCheckBox" type="CheckBox" parent="."]
offset_top = 68.0
offset_right = 149.0
offset_bottom = 92.0
text = "Random targets"

[node name="ReversingLabel" type="Label" parent="."]
offset_top = 96.0
offset_right = 149.0
offset_bottom = 110.0
text = "Reversing behavior"

[node name="ReversingBehaviorSelector" type="OptionButton" parent="."]
offset_top = 114.0
offset_right = 149.0
offset_bottom = 134.0
text = "Reversing disabled"
items = [ "Reversing disabled", null, false, 0, null, "Reversing discouraged", null, false, 1, null, "Reversing allowed", null, false, 2, null ]
selected = 0
script = ExtResource( 2 )
has_none = false

[node name="SensorAdvanceCheckbox" type="CheckBox" parent="."]
visible = false
offset_top = 46.0
offset_right = 129.0
offset_bottom = 70.0
text = "manual sensors"

[node name="ColorLabel" type="Label" parent="."]
offset_top = 138.0
offset_right = 149.0
offset_bottom = 152.0
text = "Color"

[node name="ColorButton" type="ColorPickerButton" parent="."]
offset_top = 156.0
offset_right = 149.0
offset_bottom = 176.0

[node name="WagonLabel" type="Label" parent="."]
offset_top = 180.0
offset_right = 149.0
offset_bottom = 194.0
text = "Wagons"

[node name="WagonEdit" type="SpinBox" parent="."]
offset_top = 198.0
offset_right = 149.0
offset_bottom = 222.0
min_value = 1.0
max_value = 16.0
value = 4.0
rounded = true

[node name="BLETrainContainer" type="VBoxContainer" parent="."]
offset_top = 226.0
offset_right = 149.0
offset_bottom = 264.0

[node name="Label" type="Label" parent="BLETrainContainer"]
offset_right = 149.0
offset_bottom = 14.0
text = "Train hub"

[node name="BLETrainSelector" type="OptionButton" parent="BLETrainContainer"]
offset_top = 18.0
offset_right = 149.0
offset_bottom = 38.0
script = ExtResource( 2 )

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 268.0
offset_right = 149.0
offset_bottom = 272.0

[node name="Storage" type="GridContainer" parent="."]
offset_top = 276.0
offset_right = 149.0
offset_bottom = 276.0
columns = 2

[connection signal="text_changed" from="EditableLabel" to="." method="_on_EditableLabel_text_changed"]
[connection signal="pressed" from="SetHomeButton" to="." method="_on_SetHomeButton_pressed"]
[connection signal="pressed" from="GoHomeButton" to="." method="_on_GoHomeButton_pressed"]
[connection signal="toggled" from="RandomTargetsCheckBox" to="." method="_on_RandomTargetsCheckBox_toggled"]
[connection signal="meta_selected" from="ReversingBehaviorSelector" to="." method="_on_ReversingBehaviorSelector_meta_selected"]
[connection signal="toggled" from="SensorAdvanceCheckbox" to="." method="_on_SensorAdvanceCheckbox_toggled"]
[connection signal="color_changed" from="ColorButton" to="." method="_on_ColorButton_color_changed"]
[connection signal="value_changed" from="WagonEdit" to="." method="_on_WagonEdit_value_changed"]
[connection signal="meta_selected" from="BLETrainContainer/BLETrainSelector" to="." method="_on_BLETrainSelector_meta_selected"]
